# Pedestrian_Counter

./: CMakeLists.txt  README.md
cmake/: OptionsCommon.cmake  OptionsWin32Desktop.cmake  PreLoadLinuxDesktop.cmake  PreLoadWin32Desktop.cmake  QtcreatorCMakeTargets.txt
detection/inc/OpenCVWrappers/: CvBoundingBox.h  CvCanvas.h  CvCanvasWithGrayImages.h  CvFunctionPlot.h  CvHistogramPlot.h  CvLine.h  CvMultiFunctionPlotWithTrackbar.h  CvPlotUtilities.h  CvPoint.h  CvPointUtilities.h  CvRect.h  CvSize.h  LinePieceFunctions.h  OfflineFrame.h  OpenCvColours.h  OpenCvFrame.h  OpenCvMouse.h  OpenCvUtilities.h  OpenCvVideo.h  OpenCvVideoRecorder.h  OpenCvYFrameUtilities.h  OuterContourFinder.h  Point.h  cvplot.h
detection/inc/PeopleCounter/: AlgorithmEvent.h  BlobSegmentation.h  DetectedBlob.h  DetectedObject.h  ForegroundSegmentation.h  ForegroundSubtraction.h  Geometry.h  PeopleCounter.h  Track.h  Tracking.h  gtEvent.h  gtTrack.h
detection/inc/ResearchDetectionFramework/: ResearchDetectionFramework.h
detection/inc/ResearchGeneral/: DetAlgoI.h  DetectedObject.h  ResearchGeneral.h
detection/inc/SomeUtilities/: CircularBuffer.h  ClosedInterval.h  ConnectedPixelClusters.h  CvDetectionFramework.h  DetectionTestEntry.h  DetectionTestSpecifications.h  DoubleLinkedList.h  FrameDecoding.h  Image.h  RegionOfRows.h
detection/libs/OpenCVWrappers/: CMakeLists.txt
detection/libs/OpenCVWrappers/src/: CvBoundingBox.cpp  CvCanvas.cpp  CvCanvasWithGrayImages.cpp  CvFunctionPlot.cpp  CvHistogramPlot.cpp  CvLine.cpp  CvMultiFunctionPlotWithTrackbar.cpp  CvPlotUtilities.cpp  CvPoint.cpp  CvPointUtilities.cpp  CvRect.cpp  CvSize.cpp  LinePieceFunctions.cpp  OfflineFrame.cpp  OpenCvFrame.cpp  OpenCvMouse.cpp  OpenCvUtilities.cpp  OpenCvVideo.cpp  OpenCvVideoRecorder.cpp  OuterContourFinder.cpp  Point.cpp
detection/libs/PeopleCounter/: CMakeLists.txt
detection/libs/PeopleCounter/src/: AlgorithmEvent.cpp  BlobSegmentation.cpp  ForegroundSegmentation.cpp  ForegroundSubtraction.cpp  Geometry.cpp  PeopleCounter.cpp  Track.cpp  (+3 more)
detection/libs/ResearchDetectionFramework/: CMakeLists.txt
detection/libs/ResearchGeneral/: CMakeLists.txt
detection/libs/SomeUtilities/: CMakeLists.txt
detection/libs/SomeUtilities/src/: ConnectedPixelClusters.cpp  CvDetectionFramework.cpp  DetectionTestEntry.cpp  DetectionTestSpecifications.cpp  FrameDecoding.cpp  RegionOfRows.cpp
products/libs/Pedestrian_Counter/: CMakeLists.txt
products/libs/Pedestrian_Counter/src/: AllIntrusionTapes.xml  PreDefinedParameters.h  Tapes.xml  main.cpp
z Pruts Code/: Run voor Creating DetectedObjects.txt  Run voor Edge Based Background (matrix operations).txt  Run voor Edge Based Background (simplified - no conditional update of long term bg).txt  Run voor Edge Based Background (threshold, mean, std dev).txt  Run voor Edge Based Background.txt  Run voor Running Average Background.txt  Run voor Sigma Delta + Variance + Confidence Measurement.txt  Run voor Sigma Delta Background.txt  Run voor Visualiseren Ground Truth.txt
(+25 files in other folders)
